--- a/module/platform/darwin/HardwareIO/data/config/igus2/HardwareIO.yaml
+++ b/module/platform/darwin/HardwareIO/data/config/igus2/HardwareIO.yaml
@@ -7,11 +7,10 @@ bus_reset_wait_time_us: 0
 byte_wait: 1200
 packet_wait: 100000
 
-# Low Pass Filter transfer function:
-#  y_i = alpha * x_i + beta * y_i-1 + gamma * y_i-2
-lpfAlpha: 0.5714
-lpfBeta: 0.5714
-lpfGamma: -0.1429
+# Second Order Low Pass Filter difference equation:
+#  x[n] = (1 + 2*tau + 1/omega^2)y[n] - (2*tau + 2/omega^2)y[n-1] - (1/omega^2)y[n-2]
+lpfTau : 1.0
+lpfOmega : 10.0
 
 servos:
   -  # [0]  R_SHOULDER_PITCH
