--- a/module/input/Camera/data/config/igus3/Cameras/Left.yaml
+++ b/module/input/Camera/data/config/igus3/Cameras/Left.yaml
@@ -1,16 +1,15 @@
 driver: Aravis
-deviceID: 00F7D6EC
+deviceID: 0115138C
 
 buffer_count: 4             # The number of software buffers to use.
 
 format:
   width: 1280
   height: 1024
-  pixel: BayerBG8
+  pixel: BayerRG8
 
 lens:
   radiansPerPixel: 0.0026768              # 1/focal_length_in_pixels = camera_pixel_size / camera_focal_length = 5.3um / 1.98mm = 2.6768e-3
-  radiansPerPixel: 0.00245
   centreOffset: [0,0]
   FOV: 3.14
 
