--- a/module/input/Camera/data/config/igus1/Cameras/Left.yaml
+++ b/module/input/Camera/data/config/igus1/Cameras/Left.yaml
@@ -1,5 +1,5 @@
 driver: Aravis
-deviceID: 000000
+deviceID: 01188483
 
 buffer_count: 4             # The number of software buffers to use.
 
@@ -9,7 +9,7 @@ format:
   pixel: BayerRG8
 
 lens:
-  radiansPerPixel: 0.0026768              # 1/focal_length_in_pixels = camera_pixel_size / camera_focal_length = 5.3um / 1.98mm = 2.6768e-3
+  radiansPerPixel: 0.0024242              # 1/focal_length_in_pixels = camera_pixel_size / camera_focal_length = 4.8um / 1.98mm
   centreOffset: [0,0]
   FOV: 3.14
 
