--- a/module/support/NUsight/data/config/NUsight.yaml
+++ b/module/support/NUsight/data/config/NUsight.yaml
@@ -15,6 +15,8 @@ reaction_handles:
   sensor_data: false
   # Raw image
   image: false
+  # compressed image
+  compressed_image: false
   # Classified image
   classified_image: false
   # Vision objects including goals, balls and debugging lines
