--- a/module/motion/OldWalkEngine/data/config/OldWalkEngine.yaml
+++ b/module/motion/OldWalkEngine/data/config/OldWalkEngine.yaml
@@ -52,6 +52,11 @@ walk_cycle:
       - [-0.1, 0.3] # [min_x, max_x]
       - [0.0 , 0.3] # [min_y, max_y]
       - [0, 15 * pi / 180] # [min_angle, max_angle]
+    # Angle in which the leg will be rotated about z when walking
+    leg_yaw: 0 * pi / 180
+    # Compensation factors for roll and pitch (<factor> * (current_pos - compensated_pos))
+    ankle_roll_comp: 0.8
+    ankle_pitch_comp: 0.8
   velocity:
     # Velocity limits for the walk
     limits:
