--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "repository": "github:NUbots/NUsight2",
   "engines": {
-    "node": ">=10.0.0 <11.0.0",
+    "node": ">=10.0.0",
     "yarn": "1.x"
   },
   "scripts": {
@@ -131,7 +131,7 @@
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "mobx-utils": "^5.2.0",
-    "nuclearnet.js": "^1.5.3",
+    "nuclearnet.js": "^1.5.4",
     "pixi.js": "^4.8.7",
     "protobufjs": "^6.8.8",
     "react": "^16.8.5",
