--- a/module/platform/darwin/SensorFilter/data/config/SensorFilter.yaml
+++ b/module/platform/darwin/SensorFilter/data/config/SensorFilter.yaml
@@ -1,7 +1,9 @@
-nominal_z: 0.01
-
 buttons:
   debounce_threshold : 7
+
+foot_down:
+  from_load: false
+  certainty_threshold: 0.01
 
 foot_load_sensor:
   noise_factor: 1e-4
