--- a/module/vision/GreenHorizonDetector/data/config/GreenHorizonDetector.yaml
+++ b/module/vision/GreenHorizonDetector/data/config/GreenHorizonDetector.yaml
@@ -1,4 +1,4 @@
-confidence_threshold: 0.7
-cluster_points: 5
-fudge_factor: 1.0
-debug: false
+confidence_threshold: 0.7       # How confident do we need to be that this is a green horizon point
+cluster_points: 5               # How many points do we need to claim this cluster is a viable part of the green horizon
+fudge_factor: 1.0               # Push the green horizon radially outwards by this distance (in m)
+debug: false                    # Turn on debug outputs
