Blacken all python

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,8 @@
     "editor.rulers": [
         120
     ],
+    "python.formatting.provider": "black",
+    "python.formatting.blackArgs": [
+        "-l120"
+    ]
 }
