--- a/module/platform/darwin/SensorFilter/data/config/SensorFilter.yaml
+++ b/module/platform/darwin/SensorFilter/data/config/SensorFilter.yaml
@@ -5,7 +5,7 @@ buttons:
   debounce_threshold : 7
 
 foot_down:
-  from_load: false
+  from_load: true
   certainty_threshold: 0.01
 
 foot_load_sensor:
