Updates CoM calculation for the igus (#193)
* Updates mass model

* Adds centre of mass calculation

* Adds script to assist with calculating the CoM for each particle

* Updates NUC and NUSense weight

* Adds utility to log properties from Autodesk Fusion 360

* Adds updated fusion script, Includes tensors

* Adds ability to calculate inertial tensor for entire robot

* Applies clang format

* Cleans up CoM script and removes old one

* Formatting

* Fixes inertial tensor calculation

* Adds a debug flag

* Updates mass model

* Corrects unit conversion error

* Fixes a compile error

* Fixes CoM Export

* You didn't see anything

* Updates CoM values

* Integrates CoM into walk engine

* Adds updated foot collision detection

* Debugs foot overlap calculation

* Fixes foot overlap calculations

* Adds ankle roll compensation based on IMU roll

* Corrects gyroscope conversion based on CM740 documentation

* Tries to correct IMU axes

* Adds pitch and yaw calculations

* Removes debugging code

* Adds roll, pitch and yaw calculations from Htw

* Fixes IMU axis

* Fixes Format

* Adds raw gyroscope debugging information

* Adds roll, pitch and yaw calculation through integration

* Adds angular position to sensors message and applies ankle roll compensation

* Updates sensors proto to align with new naming scheme

* Updates sensors message components to new naming scheme

* Adds configurable leg yaw, ankle roll and pitch compensation

* Limits how much the ankle roll & pitch compensation can compensate for

* Removes unneeded comments

* Fixes compile error from include comparison

* Add initial foot down training code

* Updates gyro conversion factor in Convert.h

* Always assumes CoM to be being used

* Removes unneeded lambda parameters and corrects vector constructors

* Add displacement calculations

* updates

* Fixed convert

* Train a keras model

* Do not need that

--- a/module/platform/darwin/SensorFilter/data/config/SensorFilter.yaml
+++ b/module/platform/darwin/SensorFilter/data/config/SensorFilter.yaml
@@ -1,8 +1,11 @@
+debug: False
+
+
 buttons:
   debounce_threshold : 7
 
 foot_down:
-  from_load: false
+  from_load: true
   certainty_threshold: 0.01
 
 foot_load_sensor:
