--- a/module/motion/OldWalkEngine/data/config/OldWalkEngine.yaml
+++ b/module/motion/OldWalkEngine/data/config/OldWalkEngine.yaml
@@ -1,6 +1,7 @@
+use_com: True
 stance:
   # The body height of the robot, in meters; changing this will alter how high the robot's natural stance is.
-  body_height: 0.63
+  body_height: 0.45
   # The angle of the torso when walking
   body_tilt: 13 * pi / 180
   # Default arm positions while walking
@@ -8,21 +9,21 @@ stance:
       left:
         start:
           -  120 * pi / 180 # Shoulder Pitch
-          -   0 * pi / 180 # Shoulder Roll
-          - -90 * pi / 180 # Elbow
+          -  0 * pi / 180 # Shoulder Roll
+          - -50 * pi / 180 # Elbow
         end:
           -  120 * pi / 180 # Shoulder Pitch
-          -   0 * pi / 180 # Shoulder Roll
-          - -90 * pi / 180 # Elbow
+          -  0 * pi / 180 # Shoulder Roll
+          - -50 * pi / 180 # Elbow
       right:
         start:
-          -   120 * pi / 180 # Shoulder Pitch
-          -   0 * pi / 180 # Shoulder Roll
-          - -90 * pi / 180 # Elbow
+          -  120 * pi / 180 # Shoulder Pitch
+          -  0 * pi / 180 # Shoulder Roll
+          - -50 * pi / 180 # Elbow
         end:
           -  120 * pi / 180 # Shoulder Pitch
-          -   0 * pi / 180 # Shoulder Roll
-          - -90 * pi / 180 # Elbow
+          -  0 * pi / 180 # Shoulder Roll
+          - -50 * pi / 180 # Elbow
 
   foot_offset:
     - -0.05 # The distance the ankles are offset from the torso, in meters.
@@ -51,6 +52,14 @@ walk_cycle:
       - [-0.1, 0.3] # [min_x, max_x]
       - [0.0 , 0.3] # [min_y, max_y]
       - [0, 15 * pi / 180] # [min_angle, max_angle]
+    # Angle in which the leg will be rotated about z when walking
+    leg_yaw: 0 * pi / 180
+    # Compensation factors for roll and pitch (<factor> * (current_pos - compensated_pos))
+    compensation:
+      roll_coef: 0.0
+      roll_limit: 10 * pi / 180
+      pitch_coef: 0.0
+      pitch_limit: 10 * pi / 180
   velocity:
     # Velocity limits for the walk
     limits:
@@ -162,5 +171,3 @@ STAND_SCRIPT_DURATION: 1
 # Use this to emit fake localisation Self objects based on the walk engine's blind belief
 # Note: This is really only useful as a debugging tool
 emit_localisation: true
-
-
